fix responsive on small screens

--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -93,11 +93,19 @@
 }
 
 .home-icon {
-  position: fixed;
-  top: 17px;
-  left: 20px;
   border: 2px solid #ffffff;
   border-radius: 5px;
-  font-size: 40px;
+  font-size: 35px;
   cursor: pointer;
+  margin-right: 8px;
+}
+
+@media only screen and (max-width: 425px) {
+  .input {
+    width: 450px;
+    margin-top: 16px;
+  }
+  h5 {
+    font-size: 16px;
+  }
 }
